@@ -50,7 +50,6 @@ int main(int argumentCount, char * arguments[])
 	// (temporarily) to the beginning of the list, since each test runs in its own
 	// process.
 
-
 	TEST(disambiguateTextures); // Normally you should run this first, since it validates the working directory.
 	// Now the simple tests without device
 	TEST(testIrrArray);
